--- a/styles.css
+++ b/styles.css
@@ -44,59 +44,47 @@ header {
     background-color: var(--color-secundario);
     padding: 15px 20px;
 }
-
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.profile {
-    display: flex;
-    align-items: center;
-}
-.logo {
-    width: 50px;
-    height: auto;
-    margin-right: 15px;
-}
-
-.profile-icon {
-    font-size: 40px;
-    color: var(--color-primario);
-    margin-right: 10px;
+  background-color: var(--color-secundario);
+  padding: 15px 20px;
 }
 
 .profile-text h1 {
-    font-size: 18px;
-    color: var(--color-primario);
-    margin-bottom: 4px;
+  font-size: 1.2rem;
+  color: var(--color-primario);
+  margin-bottom: 2px;
 }
 
 .profile-text p {
-    font-size: 14px;
-    color: var(--color-link);
-    margin: 0;
+  font-size: 0.9rem;
+  color: var(--color-link);
+  margin: 0;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
+.navbar-nav .nav-link {
+  color: var(--color-link) !important;
+  font-weight: bold;
+  margin-left: 10px;
 }
 
-nav ul li a {
-    color: var(--color-link);
-    text-decoration: none;
-    font-weight: bold;
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link:hover {
+  color: var(--color-primario) !important;
+  text-decoration: underline;
 }
 
-nav ul li a:hover,
-nav ul li a.active {
-    color: var(--color-primario);
-    text-decoration: underline;
+/* celu */
+@media (max-width: 768px) {
+  .header-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-nav {
+    margin-top: 10px;
+  }
 }
+
 
 /* INDEX */
 
