--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -39,4 +39,14 @@
     text-align: center;
     padding: 10px;
   }
+  .cta-button{
+    @include m.button;
+    display: inline-block;
+    margin-top: 20px;
+    text-align: center;
+
+    @include m.respond-to(mobile){
+      width: 100%;
+    }
+  }
 }
