--- a/sass/layout/_sobremi.scss
+++ b/sass/layout/_sobremi.scss
@@ -10,7 +10,7 @@
     flex-wrap: wrap;
     max-width: 1000px;
     margin: 0 auto;
-    align-items: flex-start;
+    align-items: stretch;
   }
 
   &-texto {
@@ -22,15 +22,29 @@
   }
 
   &-foto {
-    flex: 1 1 250px;
+    flex: 1 1 300px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .foto-perfil {
-      width: 250px;
-      height: 250px;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
       border-radius: 50%;
       object-fit: cover;
       background-color: #ccc;
+    }
+  }
+  @include m.respond-to(tablet){
+    .sobremi-content{
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .sobremi-foto{
+      margin-top: 20px;
     }
   }
 }
