mejoras devolucion entrega tres

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,7 +8,7 @@
 
 //BODY
 body {
-  background-color: v.$color-secundario;
+  background-color: v.$color-fondo;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: v.$color-primario;
   line-height: 1.5;
