--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -6,4 +6,4 @@ $color-acento-hover: #4834d4;
 $color-fondo: #F8F3EA;
 $color-claro: #E6D8C7;
 $color-texto: #333;
-$color-link: #6cacc5;
+$color-link: #164A68;
