--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #9ECCFA;
+  background-color: #F8F3EA;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #0B1957;
   line-height: 1.5;
@@ -42,7 +42,7 @@ header {
   margin-bottom: 2px;
 }
 .profile-text p {
-  color: #6cacc5;
+  color: #164A68;
   font-size: 0.9rem;
   margin: 0;
 }
@@ -53,7 +53,7 @@ header {
   }
 }
 .navbar-nav .nav-link {
-  color: #6cacc5 !important;
+  color: #164A68 !important;
   font-weight: bold;
   margin-left: 10px;
 }
@@ -71,7 +71,7 @@ header {
   gap: 0;
   flex-wrap: wrap;
   padding: 60px 20px;
-  background-color: #E6D8C7;
+  background-color: #F8F3EA;
 }
 @media (max-width: 768px) {
   .hero {
@@ -143,7 +143,7 @@ header {
 
 /*SOBRE MI*/
 .sobremi {
-  background-color: #E6D8C7;
+  background-color: #F8F3EA;
   padding: 60px 20px;
 }
 .sobremi-content {
@@ -230,6 +230,18 @@ header {
 .plan-card:hover {
   transform: translateY(-5px);
 }
+.plan-card .plan-img {
+  width: 100%;
+  max-height: 200px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+.plan-card .plan-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px 8px 0 0;
+}
 .plan-card h2 {
   font-size: 1.8rem;
   margin-bottom: 15px;
@@ -237,7 +249,7 @@ header {
 }
 .plan-card .subtitulo {
   font-size: 1rem;
-  color: #6cacc5;
+  color: #164A68;
 }
 .plan-card p {
   font-size: 1rem;
@@ -278,7 +290,7 @@ header {
 }
 .recetas-header p {
   font-size: 1.2rem;
-  color: #6cacc5;
+  color: #164A68;
 }
 .recetas-container {
   display: grid;
@@ -409,6 +421,9 @@ header {
   font-size: 0.9rem;
   flex-wrap: wrap;
   text-align: center;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
 }
 @media (max-width: 768px) {
   .footer-container {
