--- a/sass/layout/_planes.scss
+++ b/sass/layout/_planes.scss
@@ -27,6 +27,20 @@
 
   &:hover { transform: translateY(-5px); }
 
+  .plan-img {
+    width: 100%;
+    max-height: 200px;
+    overflow: hidden;
+    margin-bottom: 15px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 8px 8px 0 0;
+    }
+  }
+
+
   h2 { font-size: 1.8rem; margin-bottom: 15px; color: v.$color-primario; }
   .subtitulo { font-size: 1rem; color: v.$color-link; }
   p { font-size: 1rem; margin-bottom: 20px; color: v.$color-texto; }
