--- a/sass/layout/_sobremi.scss
+++ b/sass/layout/_sobremi.scss
@@ -2,7 +2,7 @@
 @use '../utilities/mixin' as m;
 /*SOBRE MI*/
 .sobremi {
-  background-color: v.$color-claro;
+  background-color: v.$color-fondo;
   padding: 60px 20px;
 
   &-content {
