fix: footer cortaba botones en mobile

--- a/sass/layout/_contacto.scss
+++ b/sass/layout/_contacto.scss
@@ -4,6 +4,7 @@
 .contacto {
   background-color: v.$color-fondo;
   padding: 60px 20px;
+  margin-bottom: 30px;
 
   &-header {
     text-align: center;
