--- a/sass/layout/_recetas.scss
+++ b/sass/layout/_recetas.scss
@@ -5,6 +5,7 @@
 .recetas {
   background-color: v.$color-fondo;
   padding: 60px 20px;
+  margin-bottom: 30px;
 
   &-header {
     text-align: center;
