--- a/sass/layout/_sobremi.scss
+++ b/sass/layout/_sobremi.scss
@@ -4,6 +4,7 @@
 .sobremi {
   background-color: v.$color-fondo;
   padding: 60px 20px;
+  margin-bottom: 30px;
 
   &-content {
     @include m.flex-center(row, 40px);
