--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ header {
   flex-wrap: wrap;
   padding: 60px 20px;
   background-color: #F8F3EA;
+  margin-bottom: 30px;
 }
 @media (max-width: 768px) {
   .hero {
@@ -145,6 +146,7 @@ header {
 .sobremi {
   background-color: #F8F3EA;
   padding: 60px 20px;
+  margin-bottom: 30px;
 }
 .sobremi-content {
   display: flex;
@@ -203,6 +205,7 @@ header {
 .planes {
   background-color: #F8F3EA;
   padding: 60px 20px;
+  margin-bottom: 30px;
 }
 .planes-container {
   display: grid;
@@ -278,6 +281,7 @@ header {
 .recetas {
   background-color: #F8F3EA;
   padding: 60px 20px;
+  margin-bottom: 30px;
 }
 .recetas-header {
   text-align: center;
@@ -338,6 +342,7 @@ header {
 .contacto {
   background-color: #F8F3EA;
   padding: 60px 20px;
+  margin-bottom: 30px;
 }
 .contacto-header {
   text-align: center;
