--- a/sass/layout/_contacto.scss
+++ b/sass/layout/_contacto.scss
@@ -4,7 +4,6 @@
 .contacto {
   background-color: v.$color-fondo;
   padding: 60px 20px;
-  margin-bottom: 30px;
 
   &-header {
     text-align: center;
@@ -55,5 +54,16 @@
     }
 
     button { @include m.button; }
+  }
+}
+//Ajuste para que footer no tape boton//
+@include m.respond-to(tablet) {
+  main {
+    padding-bottom: 50px;
+  }
+}
+@include m.respond-to(mobile) {
+  main {
+    padding-bottom: 30px;
   }
 }
