--- a/sass/layout/_recetas.scss
+++ b/sass/layout/_recetas.scss
@@ -5,7 +5,6 @@
 .recetas {
   background-color: v.$color-fondo;
   padding: 60px 20px;
-  margin-bottom: 30px;
 
   &-header {
     text-align: center;
@@ -44,4 +43,16 @@
 
   img { width: 100%; height: 180px; object-fit: cover; background-color: #ddd; }
   p { padding: 10px; font-size: 1rem; border-top: 1px solid #eee; text-align: center; }
+}
+
+//Ajuste para que footer no tape boton//
+@include m.respond-to(tablet) {
+  main {
+    padding-bottom: 50px;
+  }
+}
+@include m.respond-to(mobile) {
+  main {
+    padding-bottom: 30px;
+  }
 }
